# winccua-graphql-dashboard

./: CLAUDE.md  README.md  dashboard.html  package-lock.json  package.json  server.js  setenv.sh  winccunified-graphql.js  winccunified-html.js  winccunified-node.js  winccunified.js
c/: .gitignore  CMakeLists.txt  Makefile  README.md  graphql_client.c  monitor_tags.c  wincc_unified.c
c/examples/: basic_usage.c  monitor_tags.c
c/include/: graphql_client.h  wincc_unified.h
c/src/: graphql_client.c  wincc_unified.c
dart/: .gitignore  README.md  pubspec.yaml
dart/example-dart/: README.md  analysis_options.yaml  example.dart  pubspec.yaml  run_example.sh
dart/example-flutter/: README.md  pubspec.yaml
dart/example-flutter/android/app/: build.gradle.kts
dart/example-flutter/ios/Runner/: Info.plist
dart/example-flutter/ios/Runner.xcodeproj/: project.pbxproj
dart/example-flutter/lib/: main.dart
dart/example-flutter/lib/providers/: wincc_provider.dart
dart/example-flutter/lib/screens/: alerts_screen.dart  dashboard_screen.dart  login_screen.dart
dart/example-flutter/linux/: CMakeLists.txt
dart/example-flutter/test/: widget_test.dart
dart/example-flutter/windows/: CMakeLists.txt
dart/lib/: winccua_graphql_client.dart
dart/lib/src/: queries.dart  ssl_certificate_helper_io.dart  ssl_certificate_helper_stub.dart  ssl_certificate_helper_web.dart  winccua_client.dart
dart/lib/src/models/: alarm.dart  error.dart  (+5 more)
example-dart/: README.md  example.dart
go/: Makefile  README.md  go.mod
go/cmd/examples/: basic_usage.go  monitor.go  subscriptions.go
go/examples/basic_usage/: main.go
go/examples/subscriptions/: main.go
go/internal/graphql/: client.go  websocket.go
go/pkg/client/: client.go
go/pkg/graphql/: client.go  queries.go  websocket.go
go/pkg/types/: types.go
go/pkg/winccunified/: client.go  queries.go  subscriptions.go  types.go
go/test/: client_test.go
java/: .gitignore  README.md  build.sh  pom.xml  runExample.sh  runExampleAsyncClient.sh
nodejs/: dashboard.html  package-lock.json  winccunified-html.js  winccunified-node.js
nodejs/examples/: ._example.js  example.js
python/: .gitignore  README.md  __init__.py  example.py  requirements.txt  setup.py  winccunified_client.py  winccunified_graphql.py
rust/: .gitignore  Cargo.toml  README.md
rust/examples/: basic_usage.rs  subscriptions.rs
rust/src/: client.rs  error.rs  graphql.rs  graphql_ws.rs  lib.rs  types.rs
rust/tests/: integration_tests.rs
(+19 files in other folders)
