[package]
name = "winccua-graphql-client"
version = "1.0.0"
edition = "2021"
description = "Rust client for WinCC Unified GraphQL API"
authors = ["Andreas Vogler"]
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
futures-util = "0.3"
url = "2.5"
http = "1.1"


[lib]
name = "winccua_graphql_client"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "subscriptions"
path = "examples/subscriptions.rs"

[[example]]
name = "simple_subscriptions"
path = "examples/simple_subscriptions.rs"

[[example]]
name = "full_subscriptions"
path = "examples/full_subscriptions.rs"